--- a/spring-social/src/main/resources/application.yml
+++ b/spring-social/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server.port: 8080
 spring:
     datasource:
-        url: jdbc:mysql://localhost:33306/spring_social?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+        url: jdbc:mysql://localhost:33306/spring_social?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
         username: root
         password: root
 
